--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,85 @@
+:root {
+  --primary-color: #000;
+  --active-color: #00ACDC;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
+  font-family: Roboto, sans-serif;
 }
+
+.roboto-500 {
+  font-variation-settings: "wdth" 100;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 50px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 100%;
+  margin: 0;
+}
+
+.menu-item {
+  position: relative;
+  display: flex;
+  margin-left: 20px;
+  align-items: center;
+  list-style: none;
+}
+
+.menu-item:first-child {
+  margin-left: 0;
+}
+
+.menu-item a {
+  font-size: 12px;
+  color: var(--primary-color);
+  height: 60px;
+  text-decoration: none;
+  line-height: 60px;
+  text-transform: uppercase;
+}
+
+.menu-item a:hover {
+  color: var(--active-color);
+}
+
+.menu-item:has(a.is-active)::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 8px;
+  background-color: var(--active-color);
+}
+
+.menu-item a.is-active {
+  color: var(--active-color);
+}
+
+.logo {
+  width: 40px;
+  height: 40px;
+  margin: 10px 0;
+}
+
